optimizacion con IA para dispositivos pequeños

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <header>
         <div class="container header-content">
             <h1 class="nombre-artista">Johel García</h1>
+            <button class="menu-toggle" aria-label="Abrir menú">&#9776;</button>
             <nav>
                 <ul class="nav-links">
                     <li><a class="link-header" href="#bio">Bio</a></li>
