--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="prensa-grid">
                 <div class="prensa-card">
                     <img src="https://i.ibb.co/YjymCJJ/prensa0.png" alt="Imagen 1">
-                    <h3>Tehttps://larepublica.pe/espectaculos/musica/2022/05/24/pablo-velez-y-johel-garcia-los-directores-de-peliculas-deben-recurrir-al-talento-nacional-seductores-irresistibles Fuiste y Qué</h3>
+                    <h3>Te Fuiste y Qué</h3>
                     <p>Pablo Vélez y Johel García presentan "Te Fuiste y Qué" y buscan priorizar el amor propio.</p>
                     <a href="https://conciertosperu.com.pe/pablo-velez-y-johel-garcia-presentan-te-fuiste-y-que-y-buscan-priorizar-el-amor-propio/" target="_blank" class="btn-leer-mas">Leer más</a>
                 </div>
