--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <h2 class="subtitulos">Mi Música</h2>
             <!-- <p class="music-description">Escucha mis canciones directamente desde Spotify.</p> -->
             <div class="music-embeds">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/2izIyhl2yy3wRx14hDHgKK?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/2izIyhl2yy3wRx14hDHgKK?utm_source=generator" width="100%" height="352" frameBorder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
         </section>
 
@@ -181,7 +181,7 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
         </a>
     </div>
-    <script src="script.js"></script>
+    
 </body>
 
 </html>
